Fixed the misplaced closing quote.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/main.css">
   </head>
-  <body {% if page.extra_body_class %}class="{{ page.extra_body_class }}"{% endif %} {% if page.body_id %}id="{{ page.body_id }}{% endif %}">
+  <body {% if page.extra_body_class %}class="{{ page.extra_body_class }}"{% endif %} {% if page.body_id %}id="{{ page.body_id }}"{% endif %}>
     <div id="wrapper" class="content">
 
       {% include header.html %}
