--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
   <nav>
     <ul>
       {% include nav_items.html %}
+      <li><a href="https://github.com/snikitina/snikitina.github.io" class="icon-github" title="View the source code for this site on Github"></a></li>
     </ul>
   </nav>
 </header>
