--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -62,3 +62,59 @@ main {
     }
   }
 }
+
+
+/* Responsive ------------------------------------------------------------- */
+@media screen and (max-device-width: 960px) {
+
+  .content {
+    width: auto;
+  }
+
+  body > div > header {
+
+    h1, nav {
+      float: none;
+    }
+
+    nav ul {
+      margin-top: 1em;
+    }
+  }
+
+  .two-columns main {
+
+    & > article, & > aside {
+      display: block;
+      width: auto;
+    }
+  }
+
+  body > footer {
+
+    .content {
+      padding-top: .75em;
+
+      aside {
+        float: none;
+      }
+
+      nav {
+        float: none;
+        margin-left: $commonPadding;
+        margin-top: .5em;
+
+        ul {
+          margin: 0;
+          overflow: hidden;
+          padding: 0;
+        }
+
+        li {
+          margin-left: 0;
+          margin-right: 1.5em;
+        }
+      }
+    }
+  }
+}
