--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -66,3 +66,11 @@
     }
   }
 }
+
+@media screen and (max-device-width: 960px) {
+
+  #recent-projects li a {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
