--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ td, th {
 body > div > header {
   *zoom: 1;
   background-color: #f0f0f0;
-  padding: 1em 0;
+  padding: 1em 18px;
 }
 /* line 22, ../../../../../usr/local/Cellar/ruby193/1.9.3-p545/lib/ruby/gems/1.9.1/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 body > div > header:after {
@@ -133,30 +133,40 @@ body > div > header:after {
 }
 /* line 11, ../_sass/layout/_header.scss */
 body > div > header h1 {
-  float: left;
   font-family: "Montez", cursive;
   font-size: 3em;
-  left: -.1em;
-  margin: 0 18px;
+  left: -1px;
+  margin: 0;
   position: relative;
 }
-/* line 19, ../_sass/layout/_header.scss */
+@media screen and (min-width: 481px) {
+  /* line 11, ../_sass/layout/_header.scss */
+  body > div > header h1 {
+    float: left;
+  }
+}
+/* line 23, ../_sass/layout/_header.scss */
 body > div > header h1 a:hover {
   color: #202020 !important;
 }
-/* line 24, ../_sass/layout/_header.scss */
+/* line 28, ../_sass/layout/_header.scss */
 body > div > header nav {
-  float: right;
   font-size: 1em;
   font-weight: bold;
   letter-spacing: 1px;
-  margin-right: 18px;
   text-transform: uppercase;
 }
-/* line 33, ../_sass/layout/_header.scss */
+@media screen and (min-width: 481px) {
+  /* line 28, ../_sass/layout/_header.scss */
+  body > div > header nav {
+    float: right;
+    margin-top: 1em;
+  }
+}
+/* line 40, ../_sass/layout/_header.scss */
 body > div > header nav ul {
   *zoom: 1;
-  margin: 1.5em 0 0;
+  margin: .5em 0 0;
   padding: 0;
 }
 /* line 22, ../../../../../usr/local/Cellar/ruby193/1.9.3-p545/lib/ruby/gems/1.9.1/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
@@ -168,25 +178,29 @@ body > div > header nav ul:after {
   overflow: hidden;
   visibility: hidden;
 }
-/* line 39, ../_sass/layout/_header.scss */
+/* line 46, ../_sass/layout/_header.scss */
 body > div > header nav li {
   display: block;
   float: left;
   margin-left: 1.25em;
 }
-/* line 45, ../_sass/layout/_header.scss */
+/* line 51, ../_sass/layout/_header.scss */
+body > div > header nav li:first-child {
+  margin-left: 0;
+}
+/* line 56, ../_sass/layout/_header.scss */
 body > div > header nav a, body > div > header nav a:visited {
   color: #535353;
 }
-/* line 50, ../_sass/layout/_header.scss */
+/* line 61, ../_sass/layout/_header.scss */
 body > div > header a {
   text-decoration: none;
 }
-/* line 53, ../_sass/layout/_header.scss */
+/* line 64, ../_sass/layout/_header.scss */
 body > div > header a, body > div > header a:visited {
   color: #202020;
 }
-/* line 58, ../_sass/layout/_header.scss */
+/* line 69, ../_sass/layout/_header.scss */
 body > div > header .icon-github {
   font-size: 1.25em;
   margin-right: -.16em;
@@ -344,41 +358,32 @@ main > article > div, main > article > section, main > aside > div, main > aside
   }
 
   /* line 76, ../_sass/layout/_layout.scss */
-  body > div > header h1, body > div > header nav {
-    float: none;
-  }
-  /* line 80, ../_sass/layout/_layout.scss */
-  body > div > header nav ul {
-    margin-top: 1em;
-  }
-
-  /* line 87, ../_sass/layout/_layout.scss */
   .two-columns main > article, .two-columns main > aside {
     display: block;
     width: auto;
   }
 
-  /* line 95, ../_sass/layout/_layout.scss */
+  /* line 84, ../_sass/layout/_layout.scss */
   body > footer .content {
     padding-top: .75em;
   }
-  /* line 98, ../_sass/layout/_layout.scss */
+  /* line 87, ../_sass/layout/_layout.scss */
   body > footer .content aside {
     float: none;
   }
-  /* line 102, ../_sass/layout/_layout.scss */
+  /* line 91, ../_sass/layout/_layout.scss */
   body > footer .content nav {
     float: none;
     margin-left: 18px;
     margin-top: .5em;
   }
-  /* line 107, ../_sass/layout/_layout.scss */
+  /* line 96, ../_sass/layout/_layout.scss */
   body > footer .content nav ul {
     margin: 0;
     overflow: hidden;
     padding: 0;
   }
-  /* line 113, ../_sass/layout/_layout.scss */
+  /* line 102, ../_sass/layout/_layout.scss */
   body > footer .content nav li {
     margin-left: 0;
     margin-right: 1.5em;
