--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -12,8 +12,14 @@
     margin: 0 0 $commonPadding;
     padding: 0;
 
+    &:nth-child(4) {
+      display: none;
+    }
+
     a {
       display: block;
+      margin-left: auto;
+      margin-right: auto;
       max-width: 547px;
       overflow: hidden;
       position: relative;
@@ -71,10 +77,22 @@
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 500px) and (max-width: 640px) {
 
-  #recent-projects li a {
-    margin-left: auto;
-    margin-right: auto;
+  #recent-projects {
+
+    li {
+      // Show 4 recent projects in a 2x2 table instead of 3 in a column
+      float: left;
+      width: 48.3%;
+
+      &:nth-child(2n+1) {
+        margin-right: 3.39%;
+      }
+
+      &:nth-child(4) {
+        display: block; // show the forth project which is hidden by default
+      }
+    }
   }
 }
